--- a/deno.json
+++ b/deno.json
@@ -4,10 +4,9 @@
   },
   "imports": {
     "@libsql/client": "npm:@libsql/client@^0.14.0",
+    "@libsql/core": "npm:@libsql/core@^0.14.0",
     "@oak/oak": "jsr:@oak/oak@^17.1.3",
     "@std/assert": "jsr:@std/assert@1",
-    "@std/http": "jsr:@std/http@1",
-    "drizzle-kit": "npm:drizzle-kit@^0.28.0",
-    "drizzle-orm": "npm:drizzle-orm@^0.36.1"
+    "@std/http": "jsr:@std/http@1"
   }
 }
