--- a/deno.json
+++ b/deno.json
@@ -8,6 +8,7 @@
     "@libsql/core": "npm:@libsql/core@^0.14.0",
     "@oak/oak": "jsr:@oak/oak@^17.1.3",
     "@std/assert": "jsr:@std/assert@1",
-    "@std/http": "jsr:@std/http@1"
+    "@std/http": "jsr:@std/http@1",
+    "@ts-rex/bcrypt": "jsr:@ts-rex/bcrypt@^1.0.3"
   }
 }
