--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
     "dev_broken": "deno serve --watch -R main.ts",
-    "dev": "deno run main.ts"
+    "dev": "deno run --allow-all main.ts"
   },
   "imports": {
     "@libsql/client": "npm:@libsql/client@^0.14.0",
