feat(client): ship with a bundled client

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,9 +5,9 @@ services:
       - NODE_ENV=production
       - PORT=4001
       - DATABASE_URL=file:/app/data/dust.db
-      - JWT_SECRET=${JWT_SECRET}  # REQUIRED: Generate with: openssl rand -base64 32
-      # Set your library directories (comma-separated)
-      - DUST_DIRS=/app/books,/app/comics
+      - JWT_SECRET=${JWT_SECRET:-}  # REQUIRED: Generate with: openssl rand -base64 32
+      # Set your library directories (colon-separated, NOT comma-separated)
+      - DUST_DIRS=/app/books:/app/comics
       # Set your Google Books API key for metadata enrichment
       # - GOOGLE_BOOKS_API_KEY=${GOOGLE_BOOKS_API_KEY}
     volumes:
