--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     environment:
       - PORT=4001
       - DATABASE_URL=file:/app/data/dust.db
-      - DUST_DIRS=/app/books  # Default library directory inside container
-      - JWT_SECRET=${JWT_SECRET}  # REQUIRED: Set this in .env file
+      - DUST_DIRS=/app/books  # Default library directory inside container (use : for multiple dirs)
+      - JWT_SECRET=${JWT_SECRET:-}  # REQUIRED: Set this in .env file
       # - GOOGLE_BOOKS_API_KEY=your_api_key_here  # Uncomment and set if needed
     volumes:
       # Mount a local directory for books
