fix(client): fix client build issues

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,8 @@ jobs:
           mkdir -p package
           cp zig-out/bin/dust-server package/
           find .zig-cache -name "libsqlite.so" -type f -exec cp {} package/ \; 2>/dev/null || true
-          cp -r client/dist package/client
+          mkdir -p package/client
+          cp -r client/dist package/client/
           tar -czf dist/dust-server-linux-x86_64.tar.gz -C package .
           rm -rf package
           
@@ -60,7 +61,8 @@ jobs:
           mkdir -p package
           cp zig-out/bin/dust-server package/
           find .zig-cache -name "libsqlite.so" -type f -exec cp {} package/ \; 2>/dev/null || true
-          cp -r client/dist package/client
+          mkdir -p package/client
+          cp -r client/dist package/client/
           tar -czf dist/dust-server-linux-aarch64.tar.gz -C package .
           rm -rf package
           
@@ -69,7 +71,8 @@ jobs:
           mkdir -p package
           cp zig-out/bin/dust-server package/
           find .zig-cache -name "libsqlite.dylib" -o -name "libsqlite.so" -type f -exec cp {} package/ \; 2>/dev/null || true
-          cp -r client/dist package/client
+          mkdir -p package/client
+          cp -r client/dist package/client/
           tar -czf dist/dust-server-macos-x86_64.tar.gz -C package .
           rm -rf package
           
@@ -78,7 +81,8 @@ jobs:
           mkdir -p package
           cp zig-out/bin/dust-server package/
           find .zig-cache -name "libsqlite.dylib" -o -name "libsqlite.so" -type f -exec cp {} package/ \; 2>/dev/null || true
-          cp -r client/dist package/client
+          mkdir -p package/client
+          cp -r client/dist package/client/
           tar -czf dist/dust-server-macos-aarch64.tar.gz -C package .
           rm -rf package
       
